# todo-master

./: .env.example  .gitignore  README.md  package.json
.kiro/specs/ai-pompous-subtask-decomposer/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/todo-app-fastapi-nextjs/: design.md  requirements.md  research.md  spec.json  tasks.md
backend/: pyproject.toml  requirements.txt  todos.json  todos.json.bak
backend/app/: __init__.py  local_store.py  main.py  models.py  subtask_service.py
backend/tests/: test_api_create_todo.py  test_api_delete_todo.py  test_api_list_todos.py  test_api_subtasks.py  test_api_update_todo.py  test_env_example.py  test_input_validation.py  test_integration.py  test_localstore.py  test_logging.py  test_models.py  test_persistence_failure.py  test_project_dependencies.py  test_project_init.py  test_subtask_models.py  test_subtask_service.py  test_subtask_service_error_handling.py
docs/: qiita-draft-cc-sdd-copilot.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: todo.spec.ts
frontend/pages/: index.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/todos/: page.tsx
frontend/src/components/todos/: AddTodoForm.tsx  SubtaskItem.tsx  SubtaskList.tsx  TodoCard.tsx  TodoList.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  EmptyState.tsx  (+2 more)
frontend/src/hooks/: useCreateTodo.ts  useDeleteTodo.ts  useGenerateSubtasks.ts  useTodos.ts  useUpdateTodo.ts
frontend/src/lib/: api.ts
frontend/src/types/: todo.ts
tests/: test_project_init.py
