[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "pydantic>=1.10.0",
    "uvicorn>=0.22.0",
    "langchain-google-genai>=2.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.23.0",
    "pytest>=7.0.0",
]
